<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.curriculosimples.MainActivity">
    <item
        android:id="@+id/action_apagar_dados"
        android:orderInCategory="100"
        android:title="@string/action_apagar_dados"
        android:icon="@drawable/eraser"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_versao_pro"
        android:orderInCategory="100"
        android:title="@string/action_versao_pro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/action_sobre"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mais_aplicativos"
        android:orderInCategory="100"
        android:title="@string/action_mais_aplicativos"
        app:showAsAction="never" />
</menu>
