<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:shadowRadius="10.0"
                    android:gravity="center"
                    android:background="@drawable/circle"
                    android:shadowColor="@android:color/white"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:text="@string/tvStepOutrasInformacoes"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvHabilidades"/>

            <EditText
                android:id="@+id/etHabilidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:hint="@string/etHabilidadesHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvLinguas"/>

            <EditText
                android:id="@+id/etLinguas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:hint="@string/etLinguasHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvInteresses"/>

            <EditText
                android:id="@+id/etInteresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:hint="@string/etInteressesHint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvOutros"/>

            <EditText
                android:id="@+id/etOutros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:hint="@string/etOutrosHint" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>