<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:shadowRadius="10.0"
                    android:gravity="center"
                    android:background="@drawable/circle"
                    android:shadowColor="@android:color/white"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:text="@string/tvStepDadosPessoais"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvNome"/>

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvSobrenome"/>

            <EditText
                android:id="@+id/etSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvDataNascimento"/>

            <EditText
                android:id="@+id/etDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="date"
                android:maxLength="10"
                android:digits="1234567890/" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEstadoCivil"/>

            <EditText
                android:id="@+id/etEstadoCivil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEndereco"/>

            <EditText
                android:id="@+id/etEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCidade"/>

            <EditText
                android:id="@+id/etCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEstado"/>

            <EditText
                android:id="@+id/etEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCEP"/>

            <EditText
                android:id="@+id/etCEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTelefone"/>

            <EditText
                android:id="@+id/etTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tvFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvFotoPRO"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/civFoto"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="3dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"
                    android:src="@drawable/adicionar"/>

                <Button
                    android:id="@+id/btnSelecionarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/btnSelecionarFoto"/>

                <ProgressBar
                    android:id="@+id/pbCarregarVideoPremiado"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPreencherDadosObrigatoriosDadosPessoais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:paddingTop="15dp"
                android:text="@string/tvPreencherDadosObrigatorios"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>