<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:shadowRadius="10.0"
                    android:gravity="center"
                    android:background="@drawable/circle"
                    android:shadowColor="@android:color/white"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:text="2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:text="@string/tvStepObjetivo"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvObjetivo"/>

            <EditText
                android:id="@+id/etObjetivo"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:inputType="textCapSentences|textMultiLine"
                android:selectAllOnFocus="true"
                android:hint="@string/etObjetivoHint"/>

            <TextView
                android:id="@+id/tvPreencherDadosObrigatoriosObjetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:paddingTop="15dp"
                android:text="@string/tvPreencherDadosObrigatorios"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>